tests/snapshots/regression-quantity_with_x_in_name-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                          = Rorqual
ship/upgradeFree                                   = 400.000000
ship/scanStrength                                  = 115.000000
ship/passiveShieldEffectiveRechargeRate            = 21.551724
ship/passiveShieldRechargeRate                     = 15.625000
ship/ehp                                           = 660788.003624
ship/shieldThermalDamageEffectiveResonance         = 0.200000
ship/shieldKineticDamageEffectiveResonance         = 0.150000
ship/shieldExplosiveDamageEffectiveResonance       = 0.125000
ship/shieldEmDamageEffectiveResonance              = 0.250000
ship/hullThermalDamageEffectiveResonance           = 0.167500
ship/hullKineticDamageEffectiveResonance           = 0.167500
ship/hullExplosiveDamageEffectiveResonance         = 0.167500
ship/hullEmDamageEffectiveResonance                = 0.167500
ship/armorThermalDamageEffectiveResonance          = 0.162500
ship/armorKineticDamageEffectiveResonance          = 0.162500
ship/armorExplosiveDamageEffectiveResonance        = 0.225000
ship/armorEmDamageEffectiveResonance               = 0.125000
ship/shieldEhp                                     = 124137.929504
ship/hullEhp                                       = 447761.182876
ship/armorEhp                                      = 88888.891244
ship/shieldDamageEffectiveResonance                = 0.725000
ship/hullDamageEffectiveResonance                  = 0.670000
ship/armorDamageEffectiveResonance                 = 0.675000
ship/droneCapacityLoad                             = 2200.000000
ship/droneActive                                   = 2.000000
ship/powerFree                                     = 420000.000000
ship/cpuFree                                       = 1200.000000
ship/capacitorDepletesIn                           = -1.000000
ship/capacitorPeakDeltaPercentage                  = 100.000000
ship/capacitorPeakDelta                            = 37.500000
ship/capacitorPeakRecharge                         = 37.500000
ship/alignTime                                     = 77.632485
ship/shipBonus2AF                                  = 0.000000
ship/shipBonusGC                                   = 0.000000
ship/shipBonusCC                                   = 0.000000
ship/shipBonusMB                                   = 0.000000
ship/shipBonusCB                                   = 0.000000
ship/shipBonusAB                                   = 0.000000
ship/shipBonusMI                                   = 0.000000
ship/shipBonusAI                                   = 0.000000
ship/shipBonusCI                                   = 0.000000
ship/shipBonusGI                                   = 0.000000
ship/shipBonusORECapital1                          = 0.000000
ship/shipBonusORECapital2                          = 0.000000
ship/shipBonusORECapital3                          = 0.000000
ship/droneBandwidthLoad                            = 50.000000
ship/shipBonusUF1                                  = 0.000000
ship/shipBonusUF2                                  = 0.000000
ship/shipBonusUC1                                  = 0.000000
ship/shipBonusUC2                                  = 0.000000
ship/shipBonusUB1                                  = 0.000000
ship/shipBonusUB2                                  = 0.000000
ship/industrialCommandBonusMiningForemanBurstRange = 0.000000
ship/capitalIndustrialShipBonusDroneOreMiningYield = 0.000000
ship/capitalIndustrialShipBonusDroneIceCycleTime   = 0.000000
ship/capitalIndustrialShipBonusDroneHitPoints      = 0.000000
ship/capitalIndustrialCommandBonusDroneDamage      = 0.000000
ship/shipBonusOreDestroyer1                        = 0.000000
ship/shipBonusOreDestroyer2                        = 0.000000
ship/shipBonusOreDestroyer3                        = 0.000000
ship/shipBonusSoEECS1                              = 0.000000
ship/shipBonusSoEECS2                              = 0.000000
ship/shipBonusSoEECS3                              = 0.000000
ship/shipBonusSoEECS4                              = 0.000000
ship/shipBonusSoEECS5                              = 0.000000
ship/shipBonusAB3                                  = 0.000000

dronebay_1-2/type  = 'Excavator' Mining Drone
dronebay_1-2/state = active

cargo_1-100/type  = Meson Exotic Plasma L
cargo_1-100/state = offline

ship                              = resource LaunchedDrones 2.000000 of 0.000000
ship                              = skill Capital Industrial Ships needs 1 has 0
ship                              = skill Capital Ships needs 2 has 0
ship                              = skill Jump Drive Operation needs 1 has 0
ship                              = skill Advanced Spaceship Command needs 5 has 0
ship                              = skill Industrial Command Ships needs 3 has 0
ship                              = skill Capital Industrial Reconfiguration needs 1 has 0
ship                              = skill Navigation needs 5 has 0
ship                              = skill Warp Drive Operation needs 5 has 0
ship                              = skill Science needs 5 has 0
ship                              = skill Spaceship Command needs 5 has 0
ship                              = skill ORE Hauler needs 3 has 0
ship                              = skill Mining Director needs 1 has 0
ship                              = skill Advanced Mass Production needs 4 has 0
ship                              = skill Leadership needs 1 has 0
ship                              = skill Mining Foreman needs 5 has 0
ship                              = skill Mass Production needs 5 has 0
ship                              = skill Industry needs 3 has 0
dronebay/'Excavator' Mining Drone = skill Mining Drone Operation needs 5 has 0
dronebay/'Excavator' Mining Drone = skill Mining needs 4 has 0
dronebay/'Excavator' Mining Drone = skill Drones needs 1 has 0
dronebay/'Excavator' Mining Drone = skill Mining Drone Specialization needs 1 has 0
