tests/snapshots/regression-quantity_with_x_in_name-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                          = Rorqual
ship/maxTargetsCharacter                           = 25.000000
ship/maxTargets                                    = 7.000000
ship/upgradeFree                                   = 400.000000
ship/scanStrength                                  = 138.000000
ship/passiveShieldEffectiveRechargeRate            = 35.919540
ship/passiveShieldRechargeRate                     = 26.041667
ship/ehp                                           = 825985.004530
ship/shieldThermalDamageEffectiveResonance         = 0.200000
ship/shieldKineticDamageEffectiveResonance         = 0.150000
ship/shieldExplosiveDamageEffectiveResonance       = 0.125000
ship/shieldEmDamageEffectiveResonance              = 0.250000
ship/hullThermalDamageEffectiveResonance           = 0.167500
ship/hullKineticDamageEffectiveResonance           = 0.167500
ship/hullExplosiveDamageEffectiveResonance         = 0.167500
ship/hullEmDamageEffectiveResonance                = 0.167500
ship/armorThermalDamageEffectiveResonance          = 0.162500
ship/armorKineticDamageEffectiveResonance          = 0.162500
ship/armorExplosiveDamageEffectiveResonance        = 0.225000
ship/armorEmDamageEffectiveResonance               = 0.125000
ship/shieldEhp                                     = 155172.411880
ship/hullEhp                                       = 559701.478595
ship/armorEhp                                      = 111111.114055
ship/shieldDamageEffectiveResonance                = 0.725000
ship/hullDamageEffectiveResonance                  = 0.670000
ship/armorDamageEffectiveResonance                 = 0.675000
ship/droneCapacityLoad                             = 2200.000000
ship/droneActive                                   = 2.000000
ship/powerFree                                     = 525000.000000
ship/cpuFree                                       = 1500.000000
ship/capacitorDepletesIn                           = -1.000000
ship/capacitorPeakDeltaPercentage                  = 100.000000
ship/capacitorPeakDelta                            = 62.500000
ship/capacitorPeakRecharge                         = 62.500000
ship/alignTime                                     = 29.476084
ship/hp                                            = 375000.000000
ship/powerOutput                                   = 525000.000000
ship/maxVelocity                                   = 75.000000
ship/cpuOutput                                     = 1500.000000
ship/rechargeRate                                  = 3375000.000000
ship/agility                                       = 0.026578
ship/maxTargetRange                                = 250000.000000
ship/scanSpeed                                     = 5062.500000
ship/warpCapacitorNeed                             = 0.000000
ship/scanMagnetometricStrength                     = 138.000000
ship/shieldCapacity                                = 112500.000000
ship/armorHP                                       = 75000.000000
ship/maxResearchGangSize                           = 30.000000
ship/shieldRechargeRate                            = 10800000.000000
ship/capacitorCapacity                             = 84375.000000
ship/shieldUniformity                              = 1.000000
ship/shipBonus2AF                                  = 25.000000
ship/shipBonusGC                                   = 25.000000
ship/shipBonusCC                                   = 25.000000
ship/shipBonusMB                                   = 25.000000
ship/shipBonusCB                                   = 25.000000
ship/shipBonusAB                                   = 25.000000
ship/shipBonusMI                                   = 25.000000
ship/shipBonusAI                                   = 25.000000
ship/shipBonusCI                                   = 25.000000
ship/shipBonusGI                                   = 25.000000
ship/scanResolution                                = 93.750000
ship/advancedAgility                               = 0.750000
ship/jumpDriveRange                                = 10.000000
ship/jumpDriveConsumptionAmount                    = 2000.000000
ship/advancedCapitalAgility                        = 0.750000
ship/jumpDriveCapacitorNeed                        = 0.712500
ship/maxJumpClones                                 = 10.500000
ship/shipBonusORECapital1                          = -25.000000
ship/shipBonusORECapital2                          = 25.000000
ship/shipBonusORECapital3                          = 15.000000
ship/droneBandwidthLoad                            = 50.000000
ship/shipBonusUF1                                  = 5.000000
ship/shipBonusUF2                                  = 5.000000
ship/shipBonusUC1                                  = 5.000000
ship/shipBonusUC2                                  = 5.000000
ship/shipBonusUB1                                  = 5.000000
ship/shipBonusUB2                                  = 5.000000
ship/industrialCommandBonusMiningForemanBurstRange = 25.000000
ship/capitalIndustrialShipBonusDroneOreMiningYield = 50.000000
ship/capitalIndustrialShipBonusDroneIceCycleTime   = -30.000000
ship/capitalIndustrialShipBonusDroneHitPoints      = 50.000000
ship/capitalIndustrialCommandBonusDroneDamage      = 50.000000
ship/conduitPassengerBonusModAdd                   = 25.000000
ship/shipBonusOreDestroyer1                        = 25.000000
ship/shipBonusOreDestroyer2                        = 25.000000
ship/shipBonusOreDestroyer3                        = 25.000000
ship/shipBonusSoEECS1                              = 25.000000
ship/shipBonusSoEECS2                              = 25.000000
ship/shipBonusSoEECS3                              = 25.000000
ship/shipBonusSoEECS4                              = 25.000000
ship/shipBonusSoEECS5                              = 25.000000
ship/shipBonusAB3                                  = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

dronebay_1-2/type             = 'Excavator' Mining Drone
dronebay_1-2/state            = active
dronebay_1-2/hp               = 2812.500000
dronebay_1-2/maxVelocity      = 343.750000
dronebay_1-2/maxRange         = 6250.000000
dronebay_1-2/damageMultiplier = 2.250000
dronebay_1-2/miningAmount     = 247.500000
dronebay_1-2/shieldCapacity   = 2812.500000
dronebay_1-2/armorHP          = 1875.000000

cargo_1-100/type  = Meson Exotic Plasma L
cargo_1-100/state = offline
